In-Class-Austin-Brown

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
          lobortis ut lectus vel, porta suscipit velit. Pellentesque vitae libero eleifend, bibendum elit pulvinar, vestibulum arcu. Phasellus tempor ut purus accumsan scelerisque. Curabitur et ligula quis felis rutrum vulputate at eget lectus. Quisque facilisis justo magna, quis sagittis erat tristique ut. Duis venenatis est non quam maximus bibendum.</p>
         </main>
    <aside class="structural">
+    <h3>List</h3>
     <ul>
         <li><a href="https://youtube.com">Youtube</li>
         <li><a href="https://twitter.com">Twitter</li>
