--- a/index.html
+++ b/index.html
@@ -7,22 +7,18 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        ul{
-            list-style-type: square;
-        }
-        li{
-            color: rgba(39, 41, 1, 0.8);
-        }
-        a{
-            color: rgba(39, 100, 1, 0.8);
-        }
-    </style>
 </head>
 <body>
     <header class="structural">
-    <h1 style="color: blueviolet;font-size: 30px;">This is the website of all time!</h1>
+    <h1>This is the website of all time!</h1>
     </header>
+    <nav class="structural">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+
+    </nav>
 <main class="structural">
     <h2>Lorem ipsum</h2>
     <p id="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dictum, magna sed mollis consequat, ipsum neque feugiat nunc, eget elementum sapien justo eget nulla. Maecenas dapibus justo ac risus blandit, id volutpat tortor tempus. Morbi quis nisl metus. Sed congue augue risus, 
