--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
     <nav class="structural">
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="gallary.html">Gallary</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-
     </nav>
-<main class="structural">
-    <h2>Lorem ipsum</h2>
-    <p id="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dictum, magna sed mollis consequat, ipsum neque feugiat nunc, eget elementum sapien justo eget nulla. Maecenas dapibus justo ac risus blandit, id volutpat tortor tempus. Morbi quis nisl metus. Sed congue augue risus, 
-        pellentesque tempor sapien vestibulum vel. Maecenas arcu enim, ornare ut mattis quis, porta nec nulla. Aliquam id finibus quam. Suspendisse quis pharetra enim. Aenean et urna quis quam condimentum aliquam sollicitudin vitae dolor. In tristique diam at augue iaculis rutrum. Cras semper convallis velit, eget egestas ante rutrum molestie.</p>
-    <p id="para2">Proin iaculis nibh imperdiet, interdum nisl in, rhoncus nisi. Phasellus fermentum posuere mi nec feugiat. Mauris sagittis, urna a scelerisque laoreet, mi elit tristique nunc, quis finibus erat dui non est. Nulla facilisi. Donec pulvinar tincidunt ligula, et varius nibh tristique ut. Donec ut gravida purus. Fusce nec ullamcorper libero, et luctus lorem. Pellentesque augue erat,
-         lobortis ut lectus vel, porta suscipit velit. Pellentesque vitae libero eleifend, bibendum elit pulvinar, vestibulum arcu. Phasellus tempor ut purus accumsan scelerisque. Curabitur et ligula quis felis rutrum vulputate at eget lectus. Quisque facilisis justo magna, quis sagittis erat tristique ut. Duis venenatis est non quam maximus bibendum.</p>
-        </main>
-   <aside class="structural">
-    <h3>List</h3>
-    <ul>
-        <li><a href="https://youtube.com">Youtube</li>
-        <li><a href="https://twitter.com">Twitter</li>
-    </ul>
-   </aside>
+    <section>
+        <main class="structural">
+            <h2>Lorem ipsum</h2>
+            <p id="para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dictum, magna sed mollis consequat, ipsum neque feugiat nunc, eget elementum sapien justo eget nulla. Maecenas dapibus justo ac risus blandit, id volutpat tortor tempus. Morbi quis nisl metus. Sed congue augue risus, 
+                pellentesque tempor sapien vestibulum vel. Maecenas arcu enim, ornare ut mattis quis, porta nec nulla. Aliquam id finibus quam. Suspendisse quis pharetra enim. Aenean et urna quis quam condimentum aliquam sollicitudin vitae dolor. In tristique diam at augue iaculis rutrum. Cras semper convallis velit, eget egestas ante rutrum molestie.</p>
+            <p id="para2">Proin iaculis nibh imperdiet, interdum nisl in, rhoncus nisi. Phasellus fermentum posuere mi nec feugiat. Mauris sagittis, urna a scelerisque laoreet, mi elit tristique nunc, quis finibus erat dui non est. Nulla facilisi. Donec pulvinar tincidunt ligula, et varius nibh tristique ut. Donec ut gravida purus. Fusce nec ullamcorper libero, et luctus lorem. Pellentesque augue erat,
+                 lobortis ut lectus vel, porta suscipit velit. Pellentesque vitae libero eleifend, bibendum elit pulvinar, vestibulum arcu. Phasellus tempor ut purus accumsan scelerisque. Curabitur et ligula quis felis rutrum vulputate at eget lectus. Quisque facilisis justo magna, quis sagittis erat tristique ut. Duis venenatis est non quam maximus bibendum.</p>
+                </main>
+           <aside class="structural">
+            <h3>List</h3>
+            <ul>
+                <li><a href="https://youtube.com">Youtube</li>
+                <li><a href="https://twitter.com">Twitter</li>
+            </ul>
+           </aside>
+    </section>
 </body>
 </html>
 <footer class="structural">
